@@ -923,6 +923,17 @@ SEXP R_igraph_array3_to_SEXP(igraph_array3_t *a) {
   return result;
 }
 
+SEXP R_igraph_0orarray3_to_SEXP(igraph_array3_t *a) {
+  SEXP result;
+  if (a) {
+    PROTECT(result=R_igraph_array3_to_SEXP(a));
+  } else {
+    PROTECT(result=R_NilValue);
+  }
+  UNPROTECT(1);
+  return result;
+}
+
 SEXP R_igraph_strvector_to_SEXP(const igraph_strvector_t *m) {
   SEXP result;
   long int i;
@@ -6163,6 +6174,84 @@ SEXP R_igraph_evolver_ad(SEXP graph, SEXP pniter, SEXP pagebins,
   return result;
   
 }
+
+SEXP R_igraph_evolver_ade(SEXP graph, SEXP pcats, SEXP pniter, SEXP pagebins,
+			  SEXP psd, SEXP pnorm, SEXP pcites, SEXP pexpected,
+			  SEXP perror, SEXP pdebug) {
+  igraph_t g;
+  igraph_vector_t cats;
+  igraph_array3_t kernel;
+  igraph_integer_t niter=REAL(pniter)[0];
+  igraph_integer_t agebins=REAL(pagebins)[0];
+  igraph_array3_t vsd, *ppsd=0, vnorm, *ppnorm=0, vcites, *ppcites=0,
+    vexpected, *ppexpected=0;
+  igraph_matrix_t debug, *ppdebug=0;
+  igraph_vector_ptr_t debugres, *ppdebugres=0;
+  igraph_real_t rlogprob, rlognull, *pplogprob=0, *pplognull=0;
+  SEXP result, names;
+  
+  R_igraph_before();
+  
+  R_SEXP_to_igraph(graph, &g);
+  R_SEXP_to_vector(pcats, &cats);
+  igraph_array3_init(&kernel, 0, 0, 0);
+  if (LOGICAL(psd)[0]) { igraph_array3_init(&vsd, 0, 0, 0); ppsd=&vsd; }
+  if (LOGICAL(pnorm)[0]) { igraph_array3_init(&vnorm, 0, 0, 0); ppnorm=&vnorm; }
+  if (LOGICAL(pcites)[0]) { igraph_array3_init(&vcites, 0, 0, 0); ppcites=&vcites; }
+  if (LOGICAL(pexpected)[0]) { 
+    igraph_array3_init(&vexpected, 0, 0, 0); 
+    ppexpected=&vexpected; 
+  }
+  if (LOGICAL(perror)[0]) { pplogprob=&rlogprob; pplognull=&rlognull; }
+  if (!isNull(pdebug) && GET_LENGTH(pdebug)!=0) {
+    R_SEXP_to_matrix(pdebug, &debug); ppdebug=&debug; 
+    igraph_vector_ptr_init(&debugres, 0); ppdebugres=&debugres;
+  }
+  
+  igraph_evolver_ade(&g, niter, agebins, &cats, &kernel, ppsd, ppnorm,
+		     ppcites, ppexpected, pplogprob, pplognull, ppdebug,
+		     ppdebugres);
+  
+  PROTECT(result=NEW_LIST(7));
+  SET_VECTOR_ELT(result, 0, R_igraph_array3_to_SEXP(&kernel));
+  igraph_array3_destroy(&kernel);
+  SET_VECTOR_ELT(result, 1, R_igraph_0orarray3_to_SEXP(ppsd));
+  if (ppsd) { igraph_array3_destroy(ppsd); }
+  SET_VECTOR_ELT(result, 2, R_igraph_0orarray3_to_SEXP(ppnorm));
+  if (ppnorm) { igraph_array3_destroy(ppnorm); }
+  SET_VECTOR_ELT(result, 3, R_igraph_0orarray3_to_SEXP(ppcites));
+  if (ppcites) { igraph_array3_destroy(ppcites); }
+  SET_VECTOR_ELT(result, 4, R_igraph_0orarray3_to_SEXP(ppexpected));
+  if (ppexpected) { igraph_array3_destroy(ppexpected); }
+  if (!isNull(pdebug) && GET_LENGTH(pdebug) != 0) {
+    /* TODO */
+  } else {
+    SET_VECTOR_ELT(result, 5, R_NilValue);
+  }
+  if (pplogprob) {
+    SET_VECTOR_ELT(result, 6, NEW_NUMERIC(2));
+    REAL(VECTOR_ELT(result, 6))[0]=*pplogprob;
+    REAL(VECTOR_ELT(result, 6))[1]=*pplognull;
+  } else {
+    SET_VECTOR_ELT(result, 6, R_NilValue);
+  }
+  PROTECT(names=NEW_CHARACTER(7));
+  SET_STRING_ELT(names, 0, CREATE_STRING_VECTOR("kernel"));
+  SET_STRING_ELT(names, 1, CREATE_STRING_VECTOR("sd"));
+  SET_STRING_ELT(names, 2, CREATE_STRING_VECTOR("norm"));
+  SET_STRING_ELT(names, 3, CREATE_STRING_VECTOR("cites"));
+  SET_STRING_ELT(names, 4, CREATE_STRING_VECTOR("expected"));
+  SET_STRING_ELT(names, 5, CREATE_STRING_VECTOR("debug"));
+  SET_STRING_ELT(names, 6, CREATE_STRING_VECTOR("error"));
+  SET_NAMES(result, names);
+  
+  R_igraph_after();  
+
+  UNPROTECT(2);
+  return result;
+  }
+  
+  
 			 
 /***********************************************/
 /* THE REST IS GENERATED BY inger.py           */
