@@ -1,3 +1,10 @@
+2007-04-19  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/evolver.R (evolver.ade) : added
+	* interfaces/R/src/rinterface.c (R_igraph_evolver_ade) : added
+
+	* interfaces/R/src/rinterface.c (R_igraph_0orarray3_to_SEXP) : added
+
 2007-04-18  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/basic.R (is.igraph) : modified to conform the
